# ai-engineering

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.claude/agents/: devops-infrastructure-expert.md
.cursor/rules/: docker-packer.mdc  makefile-conventions.mdc  project-structure.mdc  python-conventions.mdc  terraform-opentofu.mdc
.github/workflows/: makefile-validation.yml
agents/course/agentic_rag/: main.py  retriever.py  tools.py
agents/course/langgraph/: docs.py  spam.py
agents/course/llamaindex/: main.py  tools.py
agents/course/smolagent/multi_agent/: multi_agent.py
agents/course/smolagent/party_planner/: main.py
agents/hf-agent/: main.py  pyproject.toml
agents/oss-agent/: main.py  pyproject.toml
agents/oss_agent/: pyproject.toml
agents/smolagent/: main.py  pyproject.toml
agents/smolagent/multi_agent/: first_agent.py  multi_agent.py  tools.py
agents/smolagent/vision_agent/: static_agent.py
agents/tofumatic/: main.py  pyproject.toml
agents/tofumatic/agents/: __init__.py  opentofu.py
agents/tofumatic/prompts/: __init__.py  planner.py  prompt_gen.py  prompts.py
agents/tofumatic/tools/: __init__.py  tools.py
agents/tools/: tools.py
docker/: README.md
docker/chromium/: .dockerignore  Dockerfile  README.md  entrypoint.sh
infrastructure/ai-inference/: .gitignore
infrastructure/ai-inference/opentofu/: README.md  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
infrastructure/ai-inference/opentofu/iam/: main.tf  outputs.tf  providers.tf  variables.tf
infrastructure/ai-inference/opentofu/inference/: main.tf  outputs.tf  variables.tf
infrastructure/ai-inference/opentofu/inference/scripts/: user_data.sh
infrastructure/ai-inference/opentofu/kubernetes/: data.tf  k8s.tfvars  main.tf  outputs.tf  variables.tf
infrastructure/ai-inference/opentofu/modules/inference/: main.tf  outputs.tf  providers.tf  variables.tf
infrastructure/ai-inference/opentofu/modules/inference/examples/: README.md
infrastructure/ai-inference/opentofu/modules/inference/examples/gemma-3-27b-it/: main.tf  outputs.tf
infrastructure/ai-inference/opentofu/modules/inference/examples/gpt-oss-20b/: data.tf  main.tf  outputs.tf  variables.tf
infrastructure/ai-inference/opentofu/modules/inference/examples/qwen3-0.6b/: main.tf  outputs.tf  variables.tf
infrastructure/ai-inference/opentofu/modules/inference/scripts/: user_data.sh
infrastructure/ai-inference/opentofu/modules/inference/test/: README.md  go.mod  go.sum  inference_test.go
infrastructure/ai-inference/opentofu/network/: main.tf  outputs.tf  variables.tf
infrastructure/ai-inference/opentofu/scripts/: user_data.sh
infrastructure/ai-inference/packer/: README.md  build.pkr.hcl  data.pkr.hcl  plugins.pkr.hcl  sources.pkr.hcl  variables.pkr.hcl
infrastructure/ai-inference/packer/scripts/: README.md  provision.sh
infrastructure/temporal/: config.env  docker-compose.yml
intro-langgraph/: .coverage  README.md  TESTING.md  coverage.xml  main.py  pyproject.toml  run_tests.py  tools.py  utils.py
intro-langgraph/tests/: __init__.py  conftest.py  test_main.py  test_tools.py  test_utils.py
