[project]
name = "ai-engineering"
version = "0.1.0"
description = "Multi-agent AI engineering project with various agent implementations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Common dependencies
    "dotenv>=0.9.9",
    "openai>=1.101.0",
    "pydantic>=2.11.7",
    "rich>=14.1.0",
    # OSS Agent dependencies
    "wikipedia>=1.4.0",
    # SmoLAgent dependencies
    "ddgs>=9.5.5",
    "geopandas>=1.1.1",
    "huggingface-hub>=0.34.4",
    "kaleido>=1.1.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langfuse>=3.3.4",
    "openinference-instrumentation-smolagents>=0.1.16",
    "opentelemetry-exporter-otlp>=1.36.0",
    "opentelemetry-sdk>=1.36.0",
    "plotly>=6.3.0",
    "shapely>=2.1.1",
    "smolagents[litellm]>=1.21.3",
    # LlamaIndex dependencies
    "llama-index-llms-huggingface-api>=0.6.1",
    "mcp[cli]>=1.15.0",
    "llama-index-utils-workflow>=0.4.1",
    "langgraph>=0.6.7",
    "langchain-openai>=0.3.33",
    "langchain-core>=0.3.76",
    "datasets>=4.1.1",
    "langchain-huggingface>=0.3.1",
    "rank-bm25>=0.2.2",
    "structlog>=25.4.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]
