[project]
name = "intro-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-core>=0.3.74",
    "langchain-openai>=0.3.30",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.5",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "langgraph-sdk>=0.2.0",
    "langsmith>=0.4.14",
    "pydantic>=2.11.7",
    "tavily-python>=0.7.10",
    "wikipedia>=1.4.0",
]
