[project]
name = "smolagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.5.5",
    "geopandas>=1.1.1",
    "huggingface-hub>=0.34.4",
    "kaleido>=1.1.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langfuse>=3.3.4",
    "openinference-instrumentation-smolagents>=0.1.16",
    "opentelemetry-exporter-otlp>=1.36.0",
    "opentelemetry-sdk>=1.36.0",
    "plotly>=6.3.0",
    "shapely>=2.1.1",
    "smolagents[litellm]>=1.21.3",
]
